# orchestration-assurance-engine

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
apps/: README.md
apps/cli/: README.md  pyproject.toml
apps/cli/src/formal_claim_cli/: __init__.py  cli.py
docs/: FORMAL_CLAIM_MONOREPO_BACKLOG.csv  FORMAL_CLAIM_MONOREPO_BACKLOG.md  README.md
examples/: README.md
integrations/: README.md
services/: README.md
services/engine/: README.md  pyproject.toml
services/engine/src/formal_claim_engine/: __init__.py  __main__.py  action_dsl.py  artifact_provenance.py  audit_rules.py  audit_workflow.py  candidate_registry.py  certification_api.py  certification_http.py  claim_structuring_workflow.py  claim_trace_repository.py  claim_trace_service.py  claim_trace_types.py  cli.py  config.py  document_ingest.py  dual_formalization_workflow.py  engine_api.py  evaluation_evidence.py  event_normalizer.py  event_validation.py  external_reference_registry.py  fixture_runtime.py  llm_client.py  model_safe_serializer.py  models.py  orchestrator.py  paired_dataset_extractor.py  phase_assembler.py  prefix_slice_builder.py  prefix_slice_graph_builder.py  promotion_state_machine.py  proof_control.py  proof_lineage.py  proof_protocol.py  propagation_capture.py  provenance_registry.py  safe_slice_optional.py  safeslice_bridge.py  store.py  (+2 more)
services/engine/src/formal_claim_engine/agents/: __init__.py  auditor.py  claim_graph_agent.py  dev_agent.py  formalizer.py  planner.py  policy_engine.py  prompt_registry.py  proof_verifier.py  provider_adapters.py  relation_repair_agent.py  research_agent.py  response_schema_registry.py
services/engine/src/formal_claim_engine/agents/prompts/: auditor.system.md  claim_graph_agent.system.md  dev_agent.system.md  formalizer.system.md  planner.system.md  policy_engine.system.md  proof_verifier.system.md  relation_repair_agent.system.md  research_agent.system.md
services/mcp-server/: README.md  pyproject.toml
services/mcp-server/src/formal_claim_mcp_server/: __init__.py  __main__.py  jobs.py  models.py  server.py
settings/: README.md  (+2 more)
(+98 files in other folders)
