[project]
name = "formal-claim-workbench"
version = "0.1.0"
description = "Monorepo bootstrap for the Formal Claim Workbench."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[dependency-groups]
dev = [
  "datamodel-code-generator==0.27.3",
  "jsonschema==4.20.0",
  "pydantic==2.10.6",
  "pypdf>=5,<6",
  "pre-commit==3.5.0",
]

[tool.uv]
package = false
