[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formal-claim-engine"
version = "0.1.0"
description = "Canonical engine package for the Formal Claim Workbench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.40",
  "jsonschema>=4.20",
  "openai>=1.50",
  "pydantic>=2.12,<3",
  "pypdf>=5,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]

[project.scripts]
formal-claim-engine = "formal_claim_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/formal_claim_engine"]
include = ["src/formal_claim_engine/agents/prompts/*.md"]
