[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "formal-claim-mcp-server"
version = "0.1.0"
description = "Canonical MCP facade for the Formal Claim Workbench."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0",
  "pydantic>=2.12,<3",
]

[project.scripts]
formal-claim-mcp-server = "formal_claim_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/formal_claim_mcp_server"]
